# aps_mbd

./: README.md  lanelet2-install.txt
Document/: B样条Clamp路径规划模型.docx  Dubins_ReedsSheeps算法.docx  初步泊车方案.docx
Dynamic_motion_planning/: DW_Main.m  PlotVehicle.m  param.m
GitHub_MPCC_Demo/: DiscretizedLinearizedModel.m  PlotPrediction.m  README.md  findTheta.m  getNewBorders.m  simulation.m
Parking_out/: OptimalFrenetPlanner.m  PlotForward.m  QuinticPoly.m  README.md  Spline.m  Spline2D.m  calcSplineCourse.m  parking_out.avi  parking_out.m  parking_out_FrenetTraje.avi  parking_out_Slot_7meters.avi  parking_out_StartEnd.avi  parking_out_Track.avi
ReedSheep_Algorithm/: APS.slx  BaseBezierFunction.m  Parameter.m  PlotVehicle.m  README.md  RSheep.m  main.m
src_indoors_0716/: README.txt
src_indoors_0716/indoors_logic/: CMakeLists.txt  package.xml
src_indoors_0716/indoors_logic/include/Logger/: Logger.cpp  Logger.h  agv_control_config.yaml
src_indoors_0716/indoors_logic/include/indoors_logic/: bezier_model.hpp  bezier_three.hpp  control.hpp  control_node.hpp  pose.hpp  status.hpp
src_indoors_0716/indoors_logic/src/: bezier_model.cpp  bezier_three.cpp  bizer_to_mcu_server.cpp  control.cpp  control_node.cpp  control_node_callback.cpp  control_node_init.cpp  control_node_utils.cpp  main.cc  perception_client.cpp
src_indoors_0716/indoors_msgs/: CMakeLists.txt  package.xml
src_indoors_0716/indoors_msgs/msg/: ControlRes.msg  MotionState.msg  TaskType.msg  Trajectory.msg
src_indoors_0716/indoors_msgs/srv/: BizerToMcu.srv  ControlToTask.srv  PerceptionToBizer.srv  Status.srv  Taskcs.srv
src_lanelet2_0716/lanelet2_test/: CMakeLists.txt  package.xml
src_lanelet2_0716/lanelet2_test/map_file/: byd_road.osm  map.osm  new_lanelet2_maps_0715.osm  new_lanelet2_maps_z0 copy.osm  new_lanelet2_maps_z0.osm  new_lanelet2_maps_z0_0715.osm  osmpython.py
src_lanelet2_0716/lanelet2_test/scripts/: lanelet2_test.py
src_lanelet2_0716/lanelet2_test/src/: lanelet2_test.cpp
